--- a/index.html
+++ b/index.html
@@ -53,3 +53,8 @@
   
   </body>
 </html>
+
+<!--Scripts-->
+
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="javascripts/script.js"></script>
